Prevent image jumping on recipes and re-organize content

--- a/_sass/_recipe.scss
+++ b/_sass/_recipe.scss
@@ -76,8 +76,9 @@ $border-width: 0.6rem;
   }
 
   img {
+    max-height: 40rem;
     max-width: 100%;
-    max-height: 45rem;
+    width: auto;
     margin: 0 auto;
     @include border;
   }
